--- a/module-2-assignment/CSS/styles.css
+++ b/module-2-assignment/CSS/styles.css
@@ -50,16 +50,18 @@ header{
 }
 
 /* Styles for tablet screens(768 <= width <= 991px) */
-@media (min-width: 768px) and (max-width: 991px) {
-    section{
-        float:left;
-        margin-left:1%;
-        margin-right:1%;
-    }
-
-    #section1, #section2{
-        width:48%;        
-    }
+@media (min-width: 768px) {
+    @media (max-width: 991px) {
+        section{
+            float:left;
+            margin-left:1%;
+            margin-right:1%;
+        }
+    
+        #section1, #section2{
+            width:48%;        
+        }    
+    } 
     
 }
 
